# Diag

./: .gitignore  CMakeLists.txt  LICENSE  clireprt.json  project.md  readme.md  report.json
docs/: architecture.md  report_schema.md  roadmap.md
src/: main.cpp
src/cli/: Args.cpp  Args.h
src/collectors/: WMICollector.cpp  WMICollector.h
src/core/: Application.cpp  Application.h
src/exporters/: JsonExporter.cpp  JsonExporter.h
src/logging/: Logger.cpp  Logger.h
src/model/: BiosInfo.h  CpuInfo.h  DeviceReport.h  GpuInfo.h  MemoryInfo.h  SystemInfo.h
src/utils/: SizeUtils.h
